; ModuleID = '/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_psxadapter.c_hidpad_psxadapter_get_buttons.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_psxadapter.c_hidpad_psxadapter_get_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hidpad_psxadapter_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @hidpad_psxadapter_get_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hidpad_psxadapter_get_buttons(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.hidpad_psxadapter_data*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.hidpad_psxadapter_data*
  store %struct.hidpad_psxadapter_data* %7, %struct.hidpad_psxadapter_data** %5, align 8
  %8 = load %struct.hidpad_psxadapter_data*, %struct.hidpad_psxadapter_data** %5, align 8
  %9 = icmp ne %struct.hidpad_psxadapter_data* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load %struct.hidpad_psxadapter_data*, %struct.hidpad_psxadapter_data** %5, align 8
  %13 = getelementptr inbounds %struct.hidpad_psxadapter_data, %struct.hidpad_psxadapter_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @BITS_COPY16_PTR(i32* %11, i32 %14)
  br label %19

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @BIT256_CLEAR_ALL_PTR(i32* %17)
  br label %19

19:                                               ; preds = %16, %10
  ret void
}

declare dso_local i32 @BITS_COPY16_PTR(i32*, i32) #1

declare dso_local i32 @BIT256_CLEAR_ALL_PTR(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
